tests/NormalTests/paczka1/small_fuzzy/82402431.err
Error in line 2: Ct4fodx7e A664 61,2
Error in line 3: 8fw A664 77,3
Error in line 4: Ct4fodx7e A386 80,4
Error in line 1: EdG2mMTvoz A207 55,1
Error in line 8: EdG2mMTvoz A386 47,6
Error in line 9: EdG2mMTvoz A207 75,6
Error in line 11: EdG2mMTvoz A664 0,3
Error in line 6: Ct4fodx7e S742 82,5
